# local-stt-runtime

./: .gitignore  AGENTS.md  Containerfile  LICENSE  README.md  pyproject.toml  setup  smoke_test  transcribe
app/: __init__.py  audio.py  backends.py  config.py  constants.py  errors.py  output.py  segments.py  timefmt.py  transcribe.py  ui.py  whisper_backend.py
scripts/: score_transcript.py
tests/: test_audio.py  test_config.py  test_containerfile.py  test_output.py  test_score_transcript.py  test_setup_cli.py  test_skeleton.py  test_smoke_test_cli.py  test_timefmt.py  test_transcribe_cli.py  test_transcribe_runner.py  test_ui.py  test_whisper_backend.py
